# ftm

./: .gitignore  Cargo.toml  README.md  eslint.config.cjs  package.json  pnpm-lock.yaml
.cursor/commands/: lint-web.md  test-rust.md
.cursor/rules/: ftm.mdc
frontend/: app.js  i18n.js  index.html  style.css
src/: client.rs  config.rs  main.rs  path_util.rs  scanner.rs  server.rs  storage.rs  types.rs  watcher.rs
tests/: integration_test.rs  stress_test.sh
