[package]
name = "ftm"
version = "0.1.0"
edition = "2021"
description = "File Time Machine - Text file version tracking tool"

[dependencies]
clap = { version = "4", features = ["derive"] }
notify = "6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
glob = "0.3"
hex = "0.4"

[[bin]]
name = "ftm"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
